upgraded to java 21, applied new language features (#166)